# AgentZero

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROGRESS.md  README.md  WORKLOG.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml
.cursor/: mcp.json
.github/: pull_request_template.md
agentzero/: __init__.py  config.py  linkedin_mcp_server.py  log_redaction.py  mcp_server.py  models.py
coverletters/: .gitkeep
data/: collect.txt  testlist.txt  web_operator_config.json
docker/: build.manifest.json
docs/: BUILD_STORY.md  COST_AND_MODELS.md  DOCKER.md  GETTING_STARTED.md  PUBLIC_RELEASE_CHECKLIST.md  SCRAPING.md  SECURITY.md  agentzero_job_hunter_d85b7004.plan.md  chat-data-enrich-docs.plan.md  docker-build-cache.plan.md  docker-web-scrape-fix.plan.md  enrich-progress-ticker.plan.md  linkedin-first-ingest.plan.md  linkedin-scrape-reliability.plan.md  logo-branding.plan.md  pytest-hang-diagnosis.plan.md  remove-google-sheets.plan.md  scrape-durability.plan.md  scrape-three-boards-apply.plan.md  web-chat-ux.plan.md  web-chat.plan.md  web-job-card-cover-letter.plan.md  web-job-card-nav.plan.md  web-scraper-search-targets.plan.md  web-search-titles.plan.md  web-ui-advanced-display.plan.md  web-ui-docker.plan.md  web-ui-settings.plan.md  web-ui-ux-spike.plan.md
resume/: .gitkeep
scripts/: backfill_glassdoor_companies.py  backfill_linkedin_comp.py  cdp_browser_spike.py  clear_jobs.py  debug_linkedin_search.py  dev-env.ps1  diagnose_web_scrape.py  docker_build.ps1  docker_build.py  enrich_jobs.py  estimate_cost.py  google_auth.py  import_browser_cookies.py  import_sheet_status.py  launch_chrome_cdp.ps1  launch_chrome_cdp.py  launch_chrome_cdp.sh  login_job_boards.py  migrate_job_ids.py  open_glassdoor_browser.py  open_indeed_browser.py  prune_db_from_sheet.py  purge_non_remote_jobs.py  rank_and_sync.py  rank_jobs.py  run_lead_session.py  (+8 more)
(+280 files in other folders)
