[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentzero"
version = "0.1.0"
description = "Resume-driven job-hunting agent: multi-board sourcing, enrichment, ranking, and a human-in-the-loop application tracker."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AgentZero contributors" }]
keywords = ["jobs", "job-search", "scraping", "llm", "mcp", "automation"]
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "python-docx>=1.1",
    "pypdf>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "vcrpy>=6.0",
    "ruff==0.15.15",
    "mutmut>=2.4",
    "pandas>=2.0",
]
scrape = [
    "python-jobspy>=1.1.80",
    "playwright>=1.45",
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "ddgs>=9.0",
]
llm = [
    "openai>=1.40",
    "anthropic>=0.34",
]
google = [
    "gspread>=6.0",
    "google-api-python-client>=2.140",
    "google-auth>=2.33",
    "google-auth-oauthlib>=1.2",
]
mcp = [
    "fastmcp>=2.10",
]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
]

[tool.setuptools.packages.find]
include = ["agentzero*"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "external: tests that touch live external services (skipped by default in the loop)",
]

[tool.coverage.run]
branch = true
source = ["agentzero"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
